--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+# requirements.txt from pip freeze
+# To install the packages, run: pip install -r requirements.txt
+# Generated on 2024-10-05
+
 alembic==1.16.5
 colorlog==6.9.0
+dateparser==1.2.2
 Mako==1.3.10
 MarkupSafe==3.0.3
 narwhals==2.6.0
@@ -11,9 +16,11 @@ plotly==6.3.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
+regex==2025.9.18
 six==1.17.0
 SQLAlchemy==2.0.43
 ta==0.11.0
 tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
+tzlocal==5.3.1
